# qflow

./: .gitignore  Makefile  Makefile.in  README  VERSION  config.status  configure  configure.in
.github/workflows/: main.yml
scripts/: Makefile  Makefile.in  addspacers.tcl.in  annotate.tcl.in  arrangepins.tcl.in  blif2cel.tcl.in  blif2sim.tcl.in  blifanno.tcl.in  checkdirs.sh.in  cleanup.sh  consoletext.py.in  count_lvs.py.in  decongest.tcl.in  display.sh  drc.sh  gdsii.sh  getantennacell.tcl.in  getfillcell.tcl.in  getpowerground.tcl.in  graywolf.sh  helpwindow.py.in  lvs.sh  magic_db.sh  magic_drc.sh  magic_gds.sh  magic_view.sh  makesim.sh  migrate.py  migrate.py.in  migrate.sh  netgen_lvs.sh  opensta.sh  opentimer.sh  pinmanager.py.in  place2def.tcl.in  place2def2.tcl.in  place2lef2.tcl.in  place2net2.tcl.in  placement.sh  powerbus.tcl.in  (+19 more)
src/: DEF2Verilog.c  Makefile  Makefile.in  addspacers.c  blif2BSpice.c  blif2Verilog.c  blifFanout.c  hash.c  hash.h  lef.h  rc2dly.c  readdef.c  readdef.h  readlef.c  readlef.h  readliberty.c  readliberty.h  readverilog.c  readverilog.h  spice2delay.c  vesta.c  vlog2Cel.c  vlog2Def.c  vlog2Spice.c  vlog2Verilog.c  vlogFanout.c
tech/: Makefile  Makefile.in
tech/gscl45nm/: Makefile  Makefile.in  gscl45nm.gds  gscl45nm.lef  gscl45nm.magicrc.in  gscl45nm.par  gscl45nm.prm  gscl45nm.sh  gscl45nm.sp  gscl45nm.tech  gscl45nm.v
tech/osu018/: Makefile  Makefile.in  SCN6M_SUBM.10.layer_map.txt  SCN6M_SUBM.10.tech  osu018.magicrc.in  osu018.par  osu018.prm  osu018.sh  osu018_stdcells.gds2  osu018_stdcells.lef  osu018_stdcells.sp  osu018_stdcells.v
tech/osu035/: Makefile  Makefile.in  osu035.magicrc.in  osu035.par  osu035.prm  osu035.sh  osu035_setup.tcl  osu035_stdcells.gds2  osu035_stdcells.lib  osu035_stdcells.sp  osu035_stdcells.v
tech/osu035_redm4/: Makefile.in  osu035.prm  osu035_redm4.magicrc.in  osu035_redm4.par  osu035_redm4.sh  osu035_redm4_setup.tcl  osu035_redm4_stdcells.lef  osu035_stdcells.gds2  osu035_stdcells.lib  osu035_stdcells.sp  osu035_stdcells.v
tech/osu050/: Makefile  Makefile.in  SCN3ME_SUBM.30.tech  osu050.magicrc.in  osu050.par  osu050.prm  osu050.sh  osu050_stdcells.lef  osu050_stdcells.sp  osu05_stdcells.gds2  osu05_stdcells.lib  osu05_stdcells.v
